add allergens object to recipe schema
